fixed footer overlap problem when too many items in the todo list

--- a/styles/_toDoApp.scss
+++ b/styles/_toDoApp.scss
@@ -27,12 +27,11 @@ body {
   background-size: contain;
   background-color: var(--bg-color);
   width: 100vw;
-  height: 100vh;
-  position: relative;
+  min-height: 100vh;
 }
 
 section.wrapper {
-  height: 90vh;
+  min-height: 90vh;
   width: 90vw;
   @include flexbox(flex-start, column);
 
@@ -187,6 +186,7 @@ li {
 
 .view-options {
   @include flexcenter;
+  position: relative;
   gap: 1rem;
   padding: $card-padding;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
@@ -222,7 +222,6 @@ footer {
   text-align: center;
   color: var(--plus-color);
   position: absolute;
-  bottom: 0;
-  width: 100%;
+  bottom: -80px;
   height: 2.5rem;
 }
